<resources>
    <string name="app_name">LocationTrial</string>
    <string name="map_key" translatable="false">AIzaSyAGY16HouQP3xupWzeFoVqFhnrszZpD-XE</string>
    <string name="Location_Name">Location Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checklist_items">Checklist Items</string>
    <string name="reminders">Reminders</string>
    <string name="checklist">Checklist</string>
    <string name="notifications">Notifications</string>
    <string name="notifs">Notifs</string>
    <string name="name">Name</string>
    <string name="to_checklist">   To Checklist   </string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="add_item">Add Item</string>
    <string name="fill_the_details_below_to_add_a_task_into_your_todo">Fill the details below to add a task into your TODO</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="add_task">Add task</string>
    <string name="loc">loc</string>

</resources>