<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#C9F8F3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp">

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add a task"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:text="@string/fill_the_details_below_to_add_a_task_into_your_todo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/task_title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/addTaskTitle"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/task_description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/addTaskDescription"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:text="Task date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/taskDate"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:text="Task time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/taskTime"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <!--        <TextView-->
        <!--            android:id="@+id/textView"-->
        <!--            fontPath="fonts/nunito_light.ttf"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginLeft="3dp"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:text="Checklist:"-->
        <!--            tools:ignore="MissingPrefix" />-->

        <!--        <Spinner-->
        <!--            android:id="@+id/locationDropdown"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:minHeight="48dp"-->
        <!--            tools:ignore="SpeakableTextPresentCheck" />-->

        <Button
            android:id="@+id/addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#024E4D"
            android:text="@string/add_task"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>